Addiing viewer link

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="Build/Apps/PlanetaryCesiumViewer/index.html" class="button">Cesium Planetary Viewer</a></li>
+							<li><a href="viewer/Apps/PlanetaryCesiumViewer/index.html" class="button">Cesium Planetary Viewer</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -208,7 +208,7 @@
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li-->
-						<li><a href="" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/epn-vespa/cesium" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="chiara.marmo [at] u-psud [dot] fr" rel="nofollow" class="icon alt fa-envelope" onclick="this.href='mailto:' + 'chiara.marmo' + '&#x40;' + 'u-psud.fr'"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
