Fixing section min-height, adding logos.

--- a/index.html
+++ b/index.html
@@ -93,16 +93,15 @@
 					<div class="content">
 						<header>
 							<h2>A Web for Planetary Sciences</h2>
-							<p>Images are one of the main objects of observational and experimental study in Planetary Sciences.
-                                                           Images are also a source of amazement for the general public, a formidable medium for transmitting knowledge and 
-                                                           conveying the thrill of discovery.
-                                                           The World Wide Web is now a major channel of dissemination for science images. It is also the place where scientists
-                                                           seek information, publish their findings and confront ideas.
-                                                           Internet browsers have become portable, generic clients that are used not only to display remote information,
-                                                           but also to manipulate and modify it.
-                                                           </p>
 						</header>
-						<p></p>
+						<p>Images are one of the main objects of observational and experimental study in Planetary Sciences.
+                           Images are also a source of amazement for the general public, a formidable medium for transmitting knowledge and 
+                           conveying the thrill of discovery.
+                           The World Wide Web is now a major channel of dissemination for science images. It is also the place where scientists
+                           seek information, publish their findings and confront ideas.
+                           Internet browsers have become portable, generic clients that are used not only to display remote information,
+                           but also to manipulate and modify it.
+                        </p>
 						<!--ul class="actions">
 							<li><a href="#" class="button">Outreach pages</a></li>
 						</ul-->
@@ -116,12 +115,11 @@
 					<div class="content">
 						<header>
 							<h2>GIS for Planetary Sciences</h2>
-							<p>Geographical Information Systems are powerful tools for Planetary Surface analysis.
-                                                           They excel in interoperability, but are historically anchored to Earth's description.
-                                                           Using the <a href="http://cesiumjs.org" target="_blank">Cesium javascript library</a> for remote visualization,
-                                                           we develop a tool for an on-line efficient and generic planetary surface analysis <i>&agrave; la GIS</i></p>
 						</header>
-						<p></p>
+						<p>Geographical Information Systems are powerful tools for Planetary Surface analysis.
+                           They excel in interoperability, but are historically anchored to Earth's description.
+                           Using the <a href="http://cesiumjs.org" target="_blank">Cesium javascript library</a> for remote visualization,
+                           we develop a tool for an on-line efficient and generic planetary surface analysis <i>&agrave; la GIS</i></p>
 						<ul class="actions">
 							<li><a href="viewer/Apps/PlanetaryCesiumViewer/index.html" class="button">Cesium Planetary Viewer</a></li>
 						</ul>
@@ -198,6 +196,11 @@
 								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
 							</div>
 						</form-->
+						<div class="logos">
+						<a href="http://geops.geol.u-psud.fr" target="_blank"><img src="images/geops.jpg" height="70px"></a>
+						<a href="http://cnrs.fr" target="_blank"><img src="images/CNRSfilaire.jpg" height="70px"></a>
+						<a href="http://www.u-psud.fr" target="_blank"><img src="images/logo-psud-saclay.jpg" height="70px"></a>
+						<a href="http://www.europlanet-2020-ri.eu" target="_blank"><img src="images/logo_europlanet.jpg" height="70px"></a>
 					</div>
 				</section>
 
@@ -208,7 +211,7 @@
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li-->
-						<li><a href="https://github.com/epn-vespa/cesium" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/epn-vespa/cesium" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="chiara.marmo [at] u-psud [dot] fr" rel="nofollow" class="icon alt fa-envelope" onclick="this.href='mailto:' + 'chiara.marmo' + '&#x40;' + 'u-psud.fr'"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
