--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 			<!-- Header -->
 				<header id="header">
-					<!--h1 id="logo"><a href="index.html">Landed</a></h1-->
-					<!--nav id="nav">
+					<h1 id="logo"><a href="index.html"></a></h1>
+					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<!--li><a href="index.html">Home</a></li>
 							<li><a href="Build/Apps/PlanetaryCesiumViewer/index.html">Planetary GIS tool</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -30,17 +30,17 @@
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
 										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+										<ul-->
+											<li><a href="#one">Data in Planetary Sciences</a></li>
+											<li><a href="#two">A Web for Planetary Sciences</a></li>
+											<li><a href="#three">GIS for Planetary Sciences</a></li>
+											<!--li><a href="#">Option 4</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="#" class="button special">Sign Up</a></li-->
 						</ul>
 					</nav-->
 				</header>
