--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                            Using the <a href="http://cesiumjs.org" target="_blank">Cesium javascript library</a> for remote visualization,
                            we develop a tool for an on-line efficient and generic planetary surface analysis <i>&agrave; la GIS</i></p>
 						<ul class="actions">
-							<li><a href="viewer/Apps/PlanetaryCesiumViewer/index.html" class="button">Cesium Planetary Viewer</a></li>
+							<li><a href="viewer/Apps/PlanetaryCesiumViewer/index.html" class="button">Planetary Viewer</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -182,8 +182,8 @@
 					<div class="container">
 						<header>
 							<h3>Special Thanks</h3>
-							<p>Cloud@VD - Paris Sud University, Orsay<br />
-							   Trent Hare - Astrogeology Center USGS, Flagstaff</p>
+							<p>Cloud@VD - <a href="http://www.lal.in2p3.fr/?lang=en" target="_blank">LAL</a>, Paris Sud University, Orsay<br />
+							   Trent Hare - <a href="http://astrogeology.usgs.gov/" target="_blank">Astrogeology Center USGS</a>, Flagstaff</p>
 							<h4>Image Credits</h4>
                                                         <p>NASA/JPL-Caltech/Space Science Institute<br />
                                                            NASA/JPL-Caltech/MSSS<br />
@@ -198,7 +198,7 @@
 						</form-->
 						<div class="logos">
 						<a href="http://geops.geol.u-psud.fr" target="_blank"><img src="images/geops.jpg" height="70px"></a>
-						<a href="http://cnrs.fr" target="_blank"><img src="images/CNRSfilaire.jpg" height="70px"></a>
+						<a href="http://www.cnrs.fr" target="_blank"><img src="images/CNRSfilaire.jpg" height="70px"></a>
 						<a href="http://www.u-psud.fr" target="_blank"><img src="images/logo-psud-saclay.jpg" height="70px"></a>
 						<a href="http://www.europlanet-2020-ri.eu" target="_blank"><img src="images/logo_europlanet.jpg" height="70px"></a>
 					</div>
